examples/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drupal-runtime
  labels:
    app: drupal-runtime
spec:
  selector:
    app: drupal-runtime
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
