examples/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: drupal-runtime
  labels:
    app: drupal-runtime
spec:
  to:
    kind: Service
    name: drupal-runtime
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
